[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = "FastAPI official tutorial"
authors = ["Daniel Alejandro Leyva Perez <dalejandrolp99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
